--- a/src/UI/CenteredContainer.module.scss
+++ b/src/UI/CenteredContainer.module.scss
@@ -1,7 +1,7 @@
-@import "src/styles/common";
+@use "../styles/mixins.scss";
 
 .container {
-  @include flexCenter(column);
+  @include mixins.flexCenter(column);
   width: 100%;
 
   &.top {
