--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,23 +1,24 @@
-@import "src/styles/common";
+@use "../../styles/theme.scss";
+@use "../../styles/mixins.scss";
 
 .form {
   width: 450px;
 }
 
 .singUpLink {
-  color: $color-accent-secondary;
+  color: theme.$color-accent-secondary;
   text-decoration: none;
   transition: color 0.2s;
   width: 100%;
 
   &:hover a {
-    color: $color-accent-primary;
+    color: theme.$color-accent-primary;
     text-decoration: underline;
   }
 }
 
 .formFooter {
-  @include flexCenter;
+  @include mixins.flexCenter;
   gap: 4rem;
 
   width: 100%;
