--- a/src/UI/Loader/Loader.module.scss
+++ b/src/UI/Loader/Loader.module.scss
@@ -1,8 +1,8 @@
-@import "../../styles/theme";
-@import "../../styles/mixins";
+@use "../../styles/theme";
+@use "../../styles/mixins";
 
 .loaderContainer {
-  @include flex;
+  @include mixins.flex;
   row-gap: 2rem;
 
   &.column {
