--- a/src/UI/Switcher/Switcher.module.scss
+++ b/src/UI/Switcher/Switcher.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/theme";
+@use "../../styles/theme";
 
 .container {
 }
@@ -11,7 +11,7 @@
   display: block;
   width: 40px;
   height: 15px;
-  background-color: $color-text-secondary;
+  background-color: theme.$color-text-secondary;
   border-radius: 15px;
   position: relative;
 
@@ -22,7 +22,7 @@
     display: block;
     width: 25px;
     height: 25px;
-    background-color: $color-accent-tertiary;
+    background-color: theme.$color-accent-tertiary;
     border-radius: 50%;
     position: absolute;
     top: 50%;
@@ -34,7 +34,7 @@
   &:has(input:checked) {
     &::after {
       translate: 15px -50%;
-      background-color: $color-accent-secondary;
+      background-color: theme.$color-accent-secondary;
     }
   }
 }
