--- a/src/components/CheckRole/CheckRole.module.scss
+++ b/src/components/CheckRole/CheckRole.module.scss
@@ -1,16 +1,16 @@
-@import "src/styles/mixins";
-@import "src/styles/theme";
+@use "../../styles/theme.scss";
+@use "../../styles/mixins.scss";
 
 .icon,
 .sheriffCheckIcon,
 .donCheckIcon {
-  @include size(30px);
+  @include mixins.size(30px);
   font-size: 30px;
 
   position: absolute;
   top: 10px;
   left: 10px;
-  background-color: rgba($color-dark-tertiary, 0.4);
+  background-color: rgba(theme.$color-dark-tertiary, 0.4);
   border-radius: 50%;
 
   cursor: pointer;
@@ -19,13 +19,13 @@
 }
 
 .sheriffCheckIcon {
-  color: $color-accent-secondary;
+  color: theme.$color-accent-secondary;
 
   background-color: transparent;
 }
 
 .donCheckIcon {
-  color: $color-accent-primary;
+  color: theme.$color-accent-primary;
 
   background-color: transparent;
 }
