--- a/src/components/GameChat/GameChat.module.scss
+++ b/src/components/GameChat/GameChat.module.scss
@@ -1,14 +1,14 @@
-@import "src/styles/theme";
-@import "src/styles/mixins";
+@use "../../styles/theme.scss";
+@use "../../styles/mixins.scss";
 
 .container {
-  @include flex(column, flex-end, center);
+  @include mixins.flex(column, flex-end, center);
   height: 100%;
 }
 
 .messages {
-  @include flex(column, flex-start, flex-start);
-  @include customScrollbar;
+  @include mixins.flex(column, flex-start, flex-start);
+  @include mixins.customScrollbar;
   width: 100%;
   max-height: 300px;
   overflow-y: auto;
@@ -16,9 +16,9 @@
 }
 
 .messageText {
-  @include flex(column, flex-start, start);
+  @include mixins.flex(column, flex-start, start);
   padding: 1em;
-  border-radius: $border-radius;
+  border-radius: theme.$border-radius;
 
   &.myMessage {
     align-self: flex-end;
@@ -32,11 +32,11 @@
 }
 
 .inputContainer {
-  @include flex(row, space-around, center);
+  @include mixins.flex(row, space-around, center);
   width: 100%;
   padding: 1.4rem;
-  border-top: $border-color 1px solid;
-  border-bottom: $border-color 1px solid;
+  border-top: theme.$border-color 1px solid;
+  border-bottom: theme.$border-color 1px solid;
 }
 
 .sendButton {
@@ -44,5 +44,5 @@
 }
 
 .icon {
-  @include size(1.7rem);
+  @include mixins.size(1.7rem);
 }
