--- a/src/components/GameVote/GameVote.module.scss
+++ b/src/components/GameVote/GameVote.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/theme";
-@import "src/styles/mixins";
+@use "../../styles/theme.scss";
+@use "../../styles/mixins.scss";
 
 .container {
   height: 100%;
@@ -11,7 +11,7 @@
 }
 
 .list {
-  @include flex(column, flex-start, flex-start);
+  @include mixins.flex(column, flex-start, flex-start);
   flex-wrap: wrap;
   max-height: 100%;
 
