--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -1,8 +1,8 @@
-@import "src/styles/mixins";
-@import "src/styles/theme";
+@use "../../styles/theme.scss";
+@use "../../styles/mixins.scss";
 
 .container {
-  @include flex;
+  @include mixins.flex;
   column-gap: 1rem;
 
   cursor: pointer;
@@ -10,8 +10,8 @@
 }
 
 .avatar {
-  @include size(4.6rem);
-  @include rounded(50%);
+  @include mixins.size(4.6rem);
+  @include mixins.rounded(50%);
   overflow: hidden;
 
   img {
