--- a/src/components/VoteFlow/VoteFlow.module.scss
+++ b/src/components/VoteFlow/VoteFlow.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/theme.scss";
-@import "src/styles/mixins.scss";
+@use "../../styles/theme.scss";
+@use "../../styles/mixins.scss";
 
 .voteIcon {
   position: absolute;
@@ -10,15 +10,15 @@
 }
 
 .voteList {
-  @include flex(column, flex-start, flex-start);
+  @include mixins.flex(column, flex-start, flex-start);
   column-gap: 1rem;
   position: absolute;
   top: 60px;
   left: 5px;
   padding: 0.5rem;
-  background-color: rgba($color-dark-primary, 50%);
-  border-radius: $border-radius;
-  color: $color-text-tertiary;
+  background-color: rgba(theme.$color-dark-primary, 50%);
+  border-radius: theme.$border-radius;
+  color: theme.$color-text-tertiary;
   font-size: 1.4rem;
 
   z-index: 10;
@@ -31,12 +31,12 @@
 
   z-index: 10;
 
-  @include flex(row, flex-start, center);
+  @include mixins.flex(row, flex-start, center);
   column-gap: 0.5rem;
 }
 
 .voteCounter {
-  @include flexCenter;
+  @include mixins.flexCenter;
   position: absolute;
   top: -1px;
   right: -5px;
@@ -45,8 +45,8 @@
   height: 14px;
   padding: 2px;
 
-  background-color: $color-accent-tertiary;
-  color: $color-dark-tertiary;
+  background-color: theme.$color-accent-tertiary;
+  color: theme.$color-dark-tertiary;
   font-size: 1.1rem;
   line-height: 100%;
   font-weight: 600;
