--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "common";
+@use "theme";
 
 @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poppins:wght@300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap");
@@ -10,8 +10,8 @@
   font-size: 10px;
 
   color-scheme: light dark;
-  color: $color-text-primary;
-  background-color: $color-dark-primary;
+  color: theme.$color-text-primary;
+  background-color: theme.$color-dark-primary;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
