--- a/src/UI/Logo/Logo.module.scss
+++ b/src/UI/Logo/Logo.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   font-family: "Cinzel Decorative", serif;
 
+  // Sizes
   &.small {
     font-size: 1.2rem;
   }
@@ -14,6 +15,7 @@
     font-size: 6.4rem;
   }
 
+  // Position
   &.left {
     margin-right: 0.5rem;
   }
