--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   column-gap: 2rem;
   padding: 8px 40px 8px 26px;
   background-color: theme.$color-dark-secondary;
-  box-shadow: theme.$color-dark-secondary 0 1px 10px 5px;
+  border-radius: theme.$border-radius-large;
 }
 
 .spacer {
