--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,7 +1,7 @@
 // Основные цвета
 $color-dark-primary: #212121; // Очень темный серо-синий, почти черный, для фона
-$color-dark-secondary: #161b22; // Темно-серый для элементов фона и карточек
-$color-dark-tertiary: #21262d; // Средне-темный серый для фона панелей и модальных окон
+$color-dark-secondary: #373737; // Темно-серый для элементов фона и карточек
+$color-dark-tertiary: #434343; // Средне-темный серый для фона панелей и модальных окон
 $color-light-primary: #f5f5f5; // Светло-серый для текста и элементов интерфейса
 $color-light-secondary: #cfcfcf; // Светло-серый для текста и элементов интерфейса
 $color-light-tertiary: #8b949e; // Серый для текста и элементов интерфейса
@@ -31,6 +31,7 @@ $overlay-color: rgba(
 $border-color: #f5f5f5; // Цвет границ и разделителей
 $border-radius: 0.5rem; // Радиус скругления углов
 $border-radius-big: 3rem; // Радиус скругления углов для круглых элементов
+$border-radius-large: 4rem; // Радиус скругления углов для круглых элементов
 
 // Тени
 $color-shadow: #c9d1d9; // Цвет теней
