--- a/src/pages/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage.module.scss
@@ -1,4 +1,5 @@
 @use "../styles/theme.scss" as *;
+@use "sass:color";
 
 .container {
   display: flex;
@@ -35,6 +36,6 @@
   transition: background-color 0.2s ease;
 
   &:hover {
-    background-color: darken($color-accent-primary, 10%);
+    background-color: color.scale($color-accent-primary, $lightness: -10%);
   }
 }
