--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -30,3 +30,5 @@ $border-radius-large: 4rem;
 $color-shadow: #c9d1d9;
 $shadow: 0 0 4px 0 $color-shadow;
 $shadow-hover: 0 0 15px 0 $color-shadow;
+
+$header-height: 71px;
