--- a/src/components/PublicChat/PublicChat.module.scss
+++ b/src/components/PublicChat/PublicChat.module.scss
@@ -5,6 +5,8 @@
   @include flex(column);
   @include rounded;
   width: 600px;
+  height: 100vh;
+  max-height: 100%;
   background-color: $color-dark-secondary;
   padding: 16px;
 }
@@ -22,7 +24,8 @@
   @include flex(column);
   @include customScrollbar;
   width: 100%;
-  height: 400px;
+  flex: 1;
+  min-height: 0;
   overflow-y: auto;
   margin-bottom: 16px;
   padding: 16px 8px;
@@ -114,7 +117,7 @@
 
 .chatInputContainer {
   width: 100%;
-  margin-top: auto;
+  min-height: fit-content;
 
   form {
     @include flex;
