--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -4,7 +4,8 @@
   width: 100%;
   height: 100vh;
   max-height: 100vh;
-  padding: 20px 50px 50px;
+  padding: 20px 50px 0;
+  overflow: hidden;
 }
 
 .bigLogo {
