--- a/src/components/GamesList/GamesList.module.scss
+++ b/src/components/GamesList/GamesList.module.scss
@@ -1,14 +1,19 @@
 @use "../../styles/theme.scss" as *;
-
+@use "../../styles/mixins.scss" as *;
 .container {
   width: 100%;
+  height: 100%;
+  max-height: 100%;
 }
 
 .gamesTable {
+  @include rounded($border-radius-big);
   background-color: $color-dark-secondary;
-  border-radius: 8px;
   margin-bottom: 20px;
   width: 100%;
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 .tableHeader {
@@ -16,8 +21,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px 24px;
-  background-color: $color-dark-secondary;
-  border-radius: 8px 8px 0 0;
+  background-color: $color-dark-tertiary;
   font-weight: 500;
   color: $color-text-primary;
   opacity: 0.8;
@@ -37,6 +41,13 @@
       justify-self: start;
     }
   }
+}
+
+.tableContent {
+  @include customScrollbar;
+  overflow-y: auto;
+  height: calc(100% - 58px);
+  max-height: calc(100% - 58px);
 }
 
 .actionColumn {
