--- a/src/components/PublicChat/PublicChat.module.scss
+++ b/src/components/PublicChat/PublicChat.module.scss
@@ -3,7 +3,7 @@
 
 .chatContainer {
   @include flex(column);
-  @include rounded;
+  @include rounded($border-radius-big);
   width: 600px;
   height: 100vh;
   max-height: 100%;
@@ -17,7 +17,7 @@
   color: $color-text-primary;
   font-size: 14px;
   padding: 0 8px 16px 16px;
-  border-bottom: 1px solid rgba($color-text-primary, 0.1);
+  border-bottom: 1px solid rgba($color-accent-primary, 0.5);
 }
 
 .chatMessages {
@@ -70,7 +70,6 @@
     left: -8px;
     background-color: $color-dark-tertiary;
     clip-path: polygon(0 0, 100% 100%, 100% 0);
-    transform: rotate(0deg);
   }
 
   .myMessage & {
@@ -87,7 +86,6 @@
       bottom: 0;
       background-color: $color-dark-message;
       clip-path: polygon(0 0, 0 100%, 100% 100%);
-      transform: rotate(0deg);
     }
   }
 }
@@ -131,7 +129,13 @@
     width: 40px;
     cursor: pointer;
     transform: rotate(-33deg);
-    border: 1px solid $color-accent-primary;
+    border: 1px solid rgba($color-accent-primary, 0.7);
+    color: rgba($color-accent-primary, 0.7);
+
+    &:hover {
+      border-color: rgba($color-accent-primary, 0.8);
+      color: rgba($color-accent-primary, 0.8);
+    }
   }
 }
 
@@ -144,7 +148,7 @@
   height: auto;
   padding: 12px 20px;
   background-color: $color-input;
-  border: 1px solid $color-accent-primary;
+  border: 1px solid rgba($color-accent-primary, 0.7);
   color: $color-text-primary;
   font-size: 14px;
   line-height: 1.5;
