--- a/src/components/GamesList/GamesList.module.scss
+++ b/src/components/GamesList/GamesList.module.scss
@@ -2,8 +2,8 @@
 @use "../../styles/mixins.scss" as *;
 .container {
   width: 100%;
-  height: 100%;
-  max-height: 100%;
+  height: max-content;
+  max-height: calc(100vh - 100px);
 }
 
 .gamesTable {
@@ -47,7 +47,7 @@
   @include customScrollbar;
   overflow-y: auto;
   height: calc(100% - 58px);
-  max-height: calc(100% - 58px);
+  max-height: calc(100vh - 215px);
 }
 
 .actionColumn {
