Додано новий пакет framer-motion, оновлено локалізацію для відео меню, а також внесено зміни в компоненти RoleIcon, GameChat, PlayerPanel, VideoMenu та інші для покращення UI та функціональності. Виправлено помилки в типах ролей та стилях.
add RoleCard and some animations

--- a/src/components/GameChat/GameChat.module.scss
+++ b/src/components/GameChat/GameChat.module.scss
@@ -1,9 +1,10 @@
 @use "../../styles/theme.scss";
 @use "../../styles/mixins.scss";
 
-.container {
+.chatContainer {
   @include mixins.flex(column, flex-end, center);
   height: 100%;
+  width: 100%;
 }
 
 .messages {
