--- a/src/components/GameVideoContainer/GameVideoContainer.module.scss
+++ b/src/components/GameVideoContainer/GameVideoContainer.module.scss
@@ -5,7 +5,7 @@
   justify-items: center;
   align-items: center;
   gap: 1rem;
-  padding: 0 1rem;
+  padding: 0.3rem 1rem;
 
   border-right: theme.$border-color 1px solid;
 
