--- a/src/pages/Game/GamePage.module.scss
+++ b/src/pages/Game/GamePage.module.scss
@@ -17,7 +17,7 @@
 .asideSection {
   width: 100%;
   height: 20%;
-  border-bottom: theme.$border-color 1px solid;
+  border-bottom: theme.$color-accent-primary 1px solid;
 }
 
 .personalInfo,
