--- a/src/components/PopupMenu/PopupMenu.module.scss
+++ b/src/components/PopupMenu/PopupMenu.module.scss
@@ -2,10 +2,13 @@
 
 .menuElement {
   cursor: pointer;
-  color: theme.$color-accent-tertiary;
+  padding: 6px 12px;
   transition: color 0.2s ease-in-out;
+  font-size: 1.6rem;
+  color: theme.$color-text-secondary;
+  min-width: 100px;
 
   &:hover {
-    color: theme.$color-accent-secondary;
+    color: theme.$color-text-primary;
   }
 }
