--- a/src/components/GameVideoContainer/GameVideoContainer.module.scss
+++ b/src/components/GameVideoContainer/GameVideoContainer.module.scss
@@ -6,22 +6,34 @@
   align-items: center;
   gap: 1rem;
   padding: 0.3rem 1rem;
+  height: 100%;
 
   border-right: theme.$border-color 1px solid;
 
+  & > .videoContainer {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   &.twoGrid {
-    grid-template-columns: repeat(auto-fit, minmax(49%, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
   }
 
   &.threeGrid {
-    grid-template-columns: repeat(auto-fit, minmax(32%, 1fr));
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
   }
 
   &.fourGrid {
-    grid-template-columns: repeat(auto-fit, minmax(24%, 1fr));
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 
   &.fiveGrid {
-    grid-template-columns: repeat(auto-fit, minmax(19%, 1fr));
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 }
