--- a/src/components/GameChat/GameChat.module.scss
+++ b/src/components/GameChat/GameChat.module.scss
@@ -7,43 +7,7 @@
   width: 100%;
 }
 
-.messages {
-  @include mixins.flex(column, flex-start, flex-start);
-  @include mixins.customScrollbar;
-  width: 100%;
-  max-height: 300px;
-  overflow-y: auto;
-  padding: 1em;
-}
-
-.messageText {
-  @include mixins.flex(column, flex-start, start);
-  padding: 1em;
-  border-radius: theme.$border-radius;
-
-  &.myMessage {
-    align-self: flex-end;
-    background-color: #61dafb;
-    color: white;
-  }
-
-  > .strong {
-    font-weight: bold;
-  }
-}
-
 .inputContainer {
-  @include mixins.flex(row, space-around, center);
   width: 100%;
-  padding: 1.4rem;
-  border-top: theme.$border-color 1px solid;
-  border-bottom: theme.$border-color 1px solid;
-}
-
-.sendButton {
-  flex-shrink: 0;
-}
-
-.icon {
-  @include mixins.size(1.7rem);
+  padding-left: 10px;
 }
