--- a/src/components/GameVideoContainer/GameVideoContainer.module.scss
+++ b/src/components/GameVideoContainer/GameVideoContainer.module.scss
@@ -8,7 +8,7 @@
   padding: 0.3rem 1rem;
   height: 100%;
 
-  border-right: theme.$border-color 1px solid;
+  border-right: theme.$color-accent-primary 1px solid;
 
   & > .videoContainer {
     aspect-ratio: 16 / 9;
