Refactor component imports and styles for improved organization and clarity improve vote btn

--- a/src/components/GameInfoSection/GmPanel/SpeakerBlock/SpeakerBlock.module.scss
+++ b/src/components/GameInfoSection/GmPanel/SpeakerBlock/SpeakerBlock.module.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/mixins.scss";
-@import "../../../styles/theme.scss";
+@use "../../../../styles/mixins" as *;
+@use "../../../../styles/theme" as *;
 
 .speakerBlockContainer {
   @include flex(column, start, start);
